--- a/css/ahf.css
+++ b/css/ahf.css
@@ -7,6 +7,24 @@ body {
     font-style: bold;
 }
 
+.notice {
+    background-color: black;
+    color: red;
+    height: 50px;
+    padding-top: 10px;
+}
+
+.reminder {
+    background-color: gray;
+    color: black;
+    height: 50px;
+    padding-top: 10px;
+}
+
+.footer {
+    font-style: italic;
+}
+
 a:link, a:visited, a:hover, a:active {
     color: #ffffff
 }
@@ -38,3 +56,24 @@ td {
     margin-left: auto; 
     margin-right: auto;
 }
+
+div.gallery {
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 180px;
+  }
+  
+  div.gallery:hover {
+    border: 1px solid #777;
+  }
+  
+  div.gallery img {
+    width: 100%;
+    height: auto;
+  }
+  
+  div.desc {
+    padding: 15px;
+    text-align: center;
+  }
